# reddit_clone

./: .env.example  .gitignore  Cargo.toml
.sqlx/: database-url  query-046cfe9171260e4f9249b9f7a42863411b01035f37a062c68efaac39f3347ef3.json  query-0d12d7aab0acdca40c0fdb86e4dfb34f3716424e9d2c6f9b9b7e349bd2c6221c.json  query-0e2ce567f2adb397f62d063a19c1ae57f41abc00cbd6526c0af2e32b45d1b9b2.json  query-0fe3ab4c0aeb534018354bb12a627ea09a82aa66e28ae979dbb525debb30c075.json  query-160db76c1f15c4aa2f92a60b7482e1a70ee918df62ae305cff59e04533eeee9f.json  query-16e96f03c659f79d67ce9aaf09b061220778f34098422505bbd1ba77936b5cad.json  query-1a1748d650dc93738865780e51ff9939b1a5ac403fc0e57680a185aa8378ba66.json  query-1cd6347975eece6f782810f76c32b97634904173047f8fc89457a7fca85eb944.json  query-1f7e1ca17d208de2f2b194e4b3aba21e1f14ad025ed9f8e888c6cc4c9196c520.json  query-2445c00f5b40c119e0369193cb67c0b7725f17cc148d72aeaf96b86af87e7002.json  query-2aae9ff952d85c02bb139022cbe74de681a21682647ee6dcb6598bd37cc79beb.json  query-2b908aeeb2c5ff238292140b057da8c5ef5cc91b9a32fb345d4bae7e980d6d79.json  query-2be5403c54c82decd27fcfa1dcce39a888b989f67bc6e90396a09fe06b523292.json  query-373967c5b8af3b022e323b9c13face94eb4d41609ca8dcfa95c8def3ccce641a.json  query-3acbdcd9e1a5a990662d062d2a1fb98dd33171591785af09de56cc3d8d12358f.json  query-483ae5554b29bd8d65a9bdb14f09ba7c2ec775d9c8150f49a20090b05ac36228.json  query-4986f57089b5fac77b4ce219e1dc5b0318a00708793d5393bc7fba8f4e40f1b3.json  query-5e7fa70c3fe18fe5984d194d498efb08089aa818086affab69415076840b0135.json  query-5f2d6bf758ec922a072e09280baef4c8de6e8e3b0fb32ab10dc7fc327080ebe2.json  query-69306218d0f6ef8487166771c20729e81f474b678b0360121b3f188e3d2a922c.json  query-711d60ccff567df7b4a704baec8ce073466429ca0461f4480802ad03e7cb9ee8.json  query-75356109b55f715e9fd86c7f83e3ccdbcec4eb03f11bbdca846935538689ccef.json  query-805f3e13b4da796dec97bcc3ea2e207422e4467bfd941e83ff9b97f025f29ad6.json  query-819e20dbc220b1f2e30cf25f6db575cf52ef1b26c5536af66f9be90e5d7a407e.json  query-85876fcbc66a11219be9649c235b429a4850762c251a3fb61429695f33725f1c.json  query-8652d574d6c55083b042839ae3a2e7ad9cf6edbb6359a539c7911ab9836ec014.json  query-95c71856cb936584cf369ed04526534180bf8af7157302e59eed6d4f5961ae62.json  query-99c2e01336abefaf0992d5df5e0ad673467942e63331d1288d6adfa512fbf060.json  query-9c401c4d4ca1b913f8b1368c388e1e3943fb0429e6a0b070df2fef09113ab8d1.json  query-a7a4296d54466481c0e0ffbcaf37770a8a64582067a0401a21fcc4d27c38c548.json  query-a7ae248578119abe1db124fb16e8ee6546b984b2980081d94524d87f4338bf06.json  query-a8582ae9524ab2a672429ecfb47064adbe1e84d2dc71007febab14088420479d.json  (+23 more)
migrations/: 20250609073438_initial_setup_and_users.sql  (+9 more)
src/: auth.rs  (+6 more)
(+34 files in other folders)
