[package]
name = "reddit_clone"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws","multipart","macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
image = { version = "0.25.6", features = ["jpeg", "png", "webp"] }
jsonwebtoken = "9.3.1"
mime = "0.3.17"
mime_guess = "2.0.5"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
rand = "0.9.1"
redis = { version = "0.32.0", features = ["tokio-comp", "aio","connection-manager"] }
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["json"] }
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid","rust_decimal", "ipnetwork"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
